@@ -1,3 +1,7 @@
+2003-06-28  Keisuke Nishida  <knishida@netlab.jp>
+
+	* common.h, common.c (cob_cmp_result): Removed.
+
 2003-06-25  Keisuke Nishida  <knishida@netlab.jp>
 
 	* termio.c (cob_accept): Do not use readline.
